--- a/191_15_2592.ipynb
+++ b/191_15_2592.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "191-15-2592.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPWxQyZ4vPSnEgiuz/CsgK8",
+      "authorship_tag": "ABX9TyMinXhpqGIyYczdnhzTKHOi",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,13 +34,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "JcDqTmVA1vDJ",
-        "outputId": "16607c64-0164-4896-c488-c7257967a5ab"
+        "outputId": "4f3f5b12-70e5-4523-d374-ebf97d012da0"
       },
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/gdrive')"
       ],
-      "execution_count": 11,
+      "execution_count": 51,
       "outputs": [
         {
           "output_type": "stream",
@@ -58,34 +58,30 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "EoBsg5ZD4xXS",
-        "outputId": "44a55e8b-8c03-47f6-e902-c5bcd59ae023"
+        "outputId": "760841ac-9eff-4833-871f-e239d893614d"
       },
       "source": [
         "!pip3 install catboost"
       ],
-      "execution_count": 30,
+      "execution_count": 52,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Collecting catboost\n",
-            "  Downloading catboost-0.26-cp37-none-manylinux1_x86_64.whl (69.2 MB)\n",
-            "\u001b[K     |████████████████████████████████| 69.2 MB 5.5 kB/s \n",
-            "\u001b[?25hRequirement already satisfied: plotly in /usr/local/lib/python3.7/dist-packages (from catboost) (4.4.1)\n",
-            "Requirement already satisfied: matplotlib in /usr/local/lib/python3.7/dist-packages (from catboost) (3.2.2)\n",
-            "Requirement already satisfied: graphviz in /usr/local/lib/python3.7/dist-packages (from catboost) (0.10.1)\n",
-            "Requirement already satisfied: six in /usr/local/lib/python3.7/dist-packages (from catboost) (1.15.0)\n",
-            "Requirement already satisfied: numpy>=1.16.0 in /usr/local/lib/python3.7/dist-packages (from catboost) (1.19.5)\n",
+            "Requirement already satisfied: catboost in /usr/local/lib/python3.7/dist-packages (0.26)\n",
+            "Requirement already satisfied: plotly in /usr/local/lib/python3.7/dist-packages (from catboost) (4.4.1)\n",
             "Requirement already satisfied: scipy in /usr/local/lib/python3.7/dist-packages (from catboost) (1.4.1)\n",
+            "Requirement already satisfied: graphviz in /usr/local/lib/python3.7/dist-packages (from catboost) (0.10.1)\n",
             "Requirement already satisfied: pandas>=0.24.0 in /usr/local/lib/python3.7/dist-packages (from catboost) (1.1.5)\n",
-            "Requirement already satisfied: pytz>=2017.2 in /usr/local/lib/python3.7/dist-packages (from pandas>=0.24.0->catboost) (2018.9)\n",
+            "Requirement already satisfied: six in /usr/local/lib/python3.7/dist-packages (from catboost) (1.15.0)\n",
+            "Requirement already satisfied: matplotlib in /usr/local/lib/python3.7/dist-packages (from catboost) (3.2.2)\n",
+            "Requirement already satisfied: numpy>=1.16.0 in /usr/local/lib/python3.7/dist-packages (from catboost) (1.19.5)\n",
             "Requirement already satisfied: python-dateutil>=2.7.3 in /usr/local/lib/python3.7/dist-packages (from pandas>=0.24.0->catboost) (2.8.1)\n",
+            "Requirement already satisfied: pytz>=2017.2 in /usr/local/lib/python3.7/dist-packages (from pandas>=0.24.0->catboost) (2018.9)\n",
+            "Requirement already satisfied: cycler>=0.10 in /usr/local/lib/python3.7/dist-packages (from matplotlib->catboost) (0.10.0)\n",
             "Requirement already satisfied: pyparsing!=2.0.4,!=2.1.2,!=2.1.6,>=2.0.1 in /usr/local/lib/python3.7/dist-packages (from matplotlib->catboost) (2.4.7)\n",
             "Requirement already satisfied: kiwisolver>=1.0.1 in /usr/local/lib/python3.7/dist-packages (from matplotlib->catboost) (1.3.1)\n",
-            "Requirement already satisfied: cycler>=0.10 in /usr/local/lib/python3.7/dist-packages (from matplotlib->catboost) (0.10.0)\n",
-            "Requirement already satisfied: retrying>=1.3.3 in /usr/local/lib/python3.7/dist-packages (from plotly->catboost) (1.3.3)\n",
-            "Installing collected packages: catboost\n",
-            "Successfully installed catboost-0.26\n"
+            "Requirement already satisfied: retrying>=1.3.3 in /usr/local/lib/python3.7/dist-packages (from plotly->catboost) (1.3.3)\n"
           ],
           "name": "stdout"
         }
@@ -110,20 +106,7 @@
         "import os\n",
         "from catboost import CatBoostClassifier"
       ],
-      "execution_count": 31,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "DxmLQiH52wYj"
-      },
-      "source": [
-        "# for dirname, _, filenames in os.walk('/kaggle/input'):\n",
-        "#     for filename in filenames:\n",
-        "#         print(os.path.join(dirname, filename))"
-      ],
-      "execution_count": 34,
+      "execution_count": 53,
       "outputs": []
     },
     {
@@ -134,7 +117,7 @@
       "source": [
         "data = pd.read_csv('/content/gdrive/MyDrive/Classroom/data mining lab/hypothyroid.csv')"
       ],
-      "execution_count": 35,
+      "execution_count": 54,
       "outputs": []
     },
     {
@@ -145,12 +128,12 @@
           "height": 241
         },
         "id": "0L3NQK3735el",
-        "outputId": "c023ac98-b213-441b-83f8-fa351a5273ec"
+        "outputId": "bf852b4e-64da-4ec7-8b5b-0de94d82f1fd"
       },
       "source": [
         "data.head()"
       ],
-      "execution_count": 36,
+      "execution_count": 55,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -366,7 +349,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 36
+          "execution_count": 55
         }
       ]
     },
@@ -378,7 +361,7 @@
       "source": [
         "data=data.rename(columns={data.columns[0]:\"target\"})"
       ],
-      "execution_count": 37,
+      "execution_count": 56,
       "outputs": []
     },
     {
@@ -388,12 +371,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "P9vt8p8C39W1",
-        "outputId": "af8b7e04-9356-4c72-9d46-07769e97e596"
+        "outputId": "dd6de56d-fa48-4f72-8233-901b9071550d"
       },
       "source": [
         "data.isna().sum()"
       ],
-      "execution_count": 38,
+      "execution_count": 57,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -431,7 +414,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 38
+          "execution_count": 57
         }
       ]
     },
@@ -442,14 +425,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "xCbwuo5L4Ble",
-        "outputId": "8f8c099a-dcdc-48c9-b52c-6d60b8bab8ac"
+        "outputId": "c8bfbc84-6efd-46a6-e6e8-e5354eb7f782"
       },
       "source": [
         "for column in data.columns:\n",
         "    listOfValues=set(data[column])\n",
         "    print(column,\": \",listOfValues)"
       ],
-      "execution_count": 39,
+      "execution_count": 58,
       "outputs": [
         {
           "output_type": "stream",
@@ -492,13 +475,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "buKVmPq24DlK",
-        "outputId": "36c6cb69-6706-4daa-c7d4-d6c336e135c5"
+        "outputId": "d0773225-32bf-4f2d-ed1e-2a0150828e68"
       },
       "source": [
         "data=data.replace({\"?\":np.NAN})\n",
         "data.isna().sum()"
       ],
-      "execution_count": 40,
+      "execution_count": 59,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -536,7 +519,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 40
+          "execution_count": 59
         }
       ]
     },
@@ -548,7 +531,7 @@
       "source": [
         "del data[\"TBG\"]"
       ],
-      "execution_count": 41,
+      "execution_count": 60,
       "outputs": []
     },
     {
@@ -558,13 +541,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "4npjZU7J4LEA",
-        "outputId": "343fe1ce-1269-4f9b-9dfc-50870a4a851d"
+        "outputId": "a9dcecd6-bcf7-49b6-bdf6-7954b9f4882d"
       },
       "source": [
         "data.dropna(axis = 0, thresh = 21, inplace = True)\n",
         "data.isna().sum()"
       ],
-      "execution_count": 42,
+      "execution_count": 61,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -601,7 +584,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 42
+          "execution_count": 61
         }
       ]
     },
@@ -613,13 +596,13 @@
           "height": 459
         },
         "id": "Ju2vn62N4MfB",
-        "outputId": "6f053000-8fb8-4c2a-a138-78c0fccf1b43"
+        "outputId": "7597ca4e-e558-47aa-f8c2-4dd0fd8329d7"
       },
       "source": [
         "data = data.replace({\"t\":1,\"f\":0, \"y\":1, \"n\":0, \"hypothyroid\":1, \"negative\":0, \"F\":1, \"M\":0})\n",
         "display(data.dtypes)"
       ],
-      "execution_count": 43,
+      "execution_count": 62,
       "outputs": [
         {
           "output_type": "display_data",
@@ -666,7 +649,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "p-I6Di3A4NCu",
-        "outputId": "29c3613c-642c-4743-9370-9b10e2639230"
+        "outputId": "6ad79f98-30c1-41c0-ca9f-c89cc058f366"
       },
       "source": [
         "cols = data.columns[data.dtypes.eq('object')]\n",
@@ -675,7 +658,7 @@
         "data = data.interpolate(method = 'spline', order = 4)\n",
         "data.isna().sum()"
       ],
-      "execution_count": 44,
+      "execution_count": 63,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -712,7 +695,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 44
+          "execution_count": 63
         }
       ]
     },
@@ -724,24 +707,24 @@
           "height": 282
         },
         "id": "oZDcvSPK4RBC",
-        "outputId": "6daa211d-8eba-4eae-e292-eb45d3276845"
+        "outputId": "21ee3ae4-a5b0-491b-b491-7d5ae782cfa3"
       },
       "source": [
         "data[['Age','TSH','T3','TT4','T4U','FTI']].boxplot()"
       ],
-      "execution_count": 45,
+      "execution_count": 64,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.axes._subplots.AxesSubplot at 0x7fed37fbed10>"
+              "<matplotlib.axes._subplots.AxesSubplot at 0x7fed3763c210>"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 45
+          "execution_count": 64
         },
         {
           "output_type": "display_data",
@@ -766,7 +749,7 @@
           "height": 224
         },
         "id": "yJAS8KnE4RzN",
-        "outputId": "042102f3-10c7-4bf8-d7ee-0cb2b9d1d46a"
+        "outputId": "3b23e1bd-0f97-4769-905e-fd631442e33b"
       },
       "source": [
         "def fdiscretizer(attribute,dataframe):\n",
@@ -784,7 +767,7 @@
         "\n",
         "display(data.head())"
       ],
-      "execution_count": 46,
+      "execution_count": 65,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1004,7 +987,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "wvRGvuQI4Vim",
-        "outputId": "f1bd08bf-3ffe-48dc-d1c6-95911c0b0035"
+        "outputId": "eac7c598-c0c8-4c7a-9dcd-010c628bc33e"
       },
       "source": [
         "corr_values = abs(data[data.columns[0:]].corr()['target'][:])\n",
@@ -1012,7 +995,7 @@
         "corr_values = corr_values[corr_values > 0.10]\n",
         "corr_values"
       ],
-      "execution_count": 47,
+      "execution_count": 66,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1029,7 +1012,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 47
+          "execution_count": 66
         }
       ]
     },
@@ -1047,7 +1030,7 @@
         "\n",
         "X_train, X_test, y_train, y_test = holdout(data)"
       ],
-      "execution_count": 48,
+      "execution_count": 67,
       "outputs": []
     },
     {
@@ -1064,7 +1047,7 @@
         "    \"Naive Bayes\" : GaussianNB()\n",
         "}"
       ],
-      "execution_count": 49,
+      "execution_count": 68,
       "outputs": []
     },
     {
@@ -1075,7 +1058,7 @@
           "height": 235
         },
         "id": "MfRFjDbu4cdm",
-        "outputId": "88c2ddee-83fe-4ed7-8894-fe95a170ed39"
+        "outputId": "ccb55460-728c-4d99-80c5-b672b6abfe82"
       },
       "source": [
         "def classification(classifiers):\n",
@@ -1098,7 +1081,7 @@
         "\n",
         "display(classification(classifiers))"
       ],
-      "execution_count": 50,
+      "execution_count": 69,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1137,39 +1120,39 @@
               "  </thead>\n",
               "  <tbody>\n",
               "    <tr>\n",
-              "      <th>0.9792</th>\n",
-              "      <td>CatBoostClassifier</td>\n",
-              "      <td>0.8903</td>\n",
-              "      <td>0.9179</td>\n",
-              "      <td>0.9036</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>0.9761</th>\n",
+              "      <th>0.9896</th>\n",
               "      <td>XGBClassifier</td>\n",
-              "      <td>0.8706</td>\n",
-              "      <td>0.9163</td>\n",
-              "      <td>0.8919</td>\n",
+              "      <td>0.9278</td>\n",
+              "      <td>0.9011</td>\n",
+              "      <td>0.9140</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>0.9740</th>\n",
+              "      <th>0.9886</th>\n",
               "      <td>Decision Tree</td>\n",
-              "      <td>0.8585</td>\n",
-              "      <td>0.9152</td>\n",
-              "      <td>0.8844</td>\n",
+              "      <td>0.9036</td>\n",
+              "      <td>0.9161</td>\n",
+              "      <td>0.9097</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>0.9730</th>\n",
+              "      <th>0.9875</th>\n",
+              "      <td>CatBoostClassifier</td>\n",
+              "      <td>0.8913</td>\n",
+              "      <td>0.9156</td>\n",
+              "      <td>0.9030</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>0.9855</th>\n",
               "      <td>Nearest Neighbors</td>\n",
-              "      <td>0.8589</td>\n",
-              "      <td>0.8969</td>\n",
-              "      <td>0.8768</td>\n",
+              "      <td>0.8756</td>\n",
+              "      <td>0.8989</td>\n",
+              "      <td>0.8869</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>0.9699</th>\n",
+              "      <th>0.9481</th>\n",
               "      <td>Naive Bayes</td>\n",
-              "      <td>0.8305</td>\n",
-              "      <td>0.9396</td>\n",
-              "      <td>0.8759</td>\n",
+              "      <td>0.6914</td>\n",
+              "      <td>0.9732</td>\n",
+              "      <td>0.7630</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
@@ -1178,11 +1161,11 @@
             "text/plain": [
               "                  Classifier  Precision  Recall  FScore\n",
               "Accuracy                                               \n",
-              "0.9792    CatBoostClassifier     0.8903  0.9179  0.9036\n",
-              "0.9761         XGBClassifier     0.8706  0.9163  0.8919\n",
-              "0.9740         Decision Tree     0.8585  0.9152  0.8844\n",
-              "0.9730     Nearest Neighbors     0.8589  0.8969  0.8768\n",
-              "0.9699           Naive Bayes     0.8305  0.9396  0.8759"
+              "0.9896         XGBClassifier     0.9278  0.9011  0.9140\n",
+              "0.9886         Decision Tree     0.9036  0.9161  0.9097\n",
+              "0.9875    CatBoostClassifier     0.8913  0.9156  0.9030\n",
+              "0.9855     Nearest Neighbors     0.8756  0.8989  0.8869\n",
+              "0.9481           Naive Bayes     0.6914  0.9732  0.7630"
             ]
           },
           "metadata": {
